cluster/apps/risuai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: risuai
  namespace: kloud-apps
spec:
  type: ClusterIP
  selector:
    app: risuai
  ports:
    - port: 80
      targetPort: 6001
