cluster/apps/risuai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: risuai
  namespace: kloud-apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kloud-apps-risuai-basicauth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - risu.kloud.rche.moe
      secretName: risuai-tls
  rules:
    - host: risu.kloud.rche.moe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: risuai
                port:
                  number: 80
